// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic scaffolding to work 1`] = `
Array [
  Array [
    "ModelBase",
    "import { MSTGQLObject } from \\"mst-gql\\"

export const ModelBase = MSTGQLObject
",
    false,
  ],
  Array [
    "UserModel.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { types } from \\"mobx-state-tree\\"
import { QueryBuilder } from \\"mst-gql\\"
import { ModelBase } from \\"./internal\\"
import {RootStoreType} from \\"./internal\\"


/**
 * UserBase
 * auto generated base class for the model UserModel.
 */
export const UserModelBase = ModelBase
  .named('User')
  .props({
    __typename: types.optional(types.literal(\\"User\\"), \\"User\\"),
    id: types.identifier,
    name: types.maybeNull(types.string),
    avatar: types.maybeNull(types.string),
  })
  .views(self => ({
    get store() {
      return self.__getStore<RootStoreType>()
    }
  }))

export class UserModelSelector extends QueryBuilder {
  get id() { return this.__attr(\`id\`) }
  get name() { return this.__attr(\`name\`) }
  get avatar() { return this.__attr(\`avatar\`) }
}
export function selectFromUser() {
  return new UserModelSelector()
}

export const userModelPrimitives = selectFromUser().name.avatar
",
    true,
  ],
  Array [
    "UserModel",
    "import { Instance } from \\"mobx-state-tree\\"

import { UserModelBase } from \\"./internal\\"

/* The TypeScript type of an instance of UserModel */
export interface UserModelType extends Instance<typeof UserModel.Type> {}


/**
 * UserModel
 */
export const UserModel = UserModelBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(self))
    }
  }))
",
    false,
  ],
  Array [
    "RootStore",
    "import { Instance } from \\"mobx-state-tree\\"
import { RootStoreBase } from \\"./RootStore.base\\"

export interface RootStoreType extends Instance<typeof RootStore.Type> {}

export const RootStore = RootStoreBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(self))
    }
  }))
",
    false,
  ],
  Array [
    "RootStore.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */
import { types } from \\"mobx-state-tree\\"
import { MSTGQLStore, configureStoreMixin, QueryOptions } from \\"mst-gql\\"
import { UserModel, UserModelType, userModelPrimitives, UserModelSelector } from \\"./internal\\";


/**
* Store, managing, among others, all the objects received through graphQL
*/
export const RootStoreBase = MSTGQLStore
  .named(\\"RootStore\\")
  .extend(configureStoreMixin([['User', () => UserModel]], ['User']))
  .props({
    users: types.optional(types.map(types.late(() => UserModel)), {})
  })
  .actions(self => ({
    queryMe(variables?: {  }, resultSelector: string | ((qb: UserModelSelector) => UserModelSelector) = userModelPrimitives.toString(), options: QueryOptions = {}) {
      return self.query<{ me: UserModelType}>(\`query me { me {
        \${typeof resultSelector === \\"function\\" ? resultSelector(new UserModelSelector()).toString() : resultSelector}
      } }\`, variables, options)
    },
  }))
",
    true,
  ],
  Array [
    "reactUtils",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { createStoreContext, createUseQueryHook } from \\"mst-gql\\"
import * as React from \\"react\\"
import { RootStore, RootStoreType } from \\"./RootStore\\"

export const StoreContext = createStoreContext<RootStoreType>(React)

export const useQuery = createUseQueryHook(StoreContext, React)
",
    true,
  ],
  Array [
    "internal",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

export * from \\"./ModelBase\\"
export * from \\"./UserModel.base\\"
export * from \\"./UserModel\\"
export * from \\"./RootStore\\"
export * from \\"./RootStore.base\\"
export * from \\"./reactUtils\\"
",
    true,
  ],
  Array [
    "index",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

export {UserModel, selectFromUser, userModelPrimitives, UserModelSelector, RootStore, useQuery, StoreContext } from \\"./internal\\"
import {UserModelType } from \\"./internal\\"

export type UserModelType = UserModelType;
",
    true,
  ],
]
`;

exports[`interface field type to work 1`] = `
Array [
  Array [
    "ModelBase",
    "import { MSTGQLObject } from \\"mst-gql\\"

export const ModelBase = MSTGQLObject
",
    false,
  ],
  Array [
    "RepoModel.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { types } from \\"mobx-state-tree\\"
import { QueryBuilder } from \\"mst-gql\\"
import { ModelBase } from \\"./internal\\"
import {OrganizationModel, OwnerModelSelector, UserModel, RootStoreType} from \\"./internal\\"


/**
 * RepoBase
 * auto generated base class for the model RepoModel.
 */
export const RepoModelBase = ModelBase
  .named('Repo')
  .props({
    __typename: types.optional(types.literal(\\"Repo\\"), \\"Repo\\"),
    id: types.identifier,
    owner: types.maybeNull(types.union(types.late(() => UserModel), types.late(() => OrganizationModel))),
  })
  .views(self => ({
    get store() {
      return self.__getStore<RootStoreType>()
    }
  }))

export class RepoModelSelector extends QueryBuilder {
  get id() { return this.__attr(\`id\`) }
  owner(builder?: string | OwnerModelSelector | ((selector: OwnerModelSelector) => OwnerModelSelector)) { return this.__child(\`owner\`, OwnerModelSelector, builder) }
}
export function selectFromRepo() {
  return new RepoModelSelector()
}

export const repoModelPrimitives = selectFromRepo()
",
    true,
  ],
  Array [
    "RepoModel",
    "import { Instance } from \\"mobx-state-tree\\"

import { RepoModelBase } from \\"./internal\\"

/* The TypeScript type of an instance of RepoModel */
export interface RepoModelType extends Instance<typeof RepoModel.Type> {}


/**
 * RepoModel
 */
export const RepoModel = RepoModelBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(self))
    }
  }))
",
    false,
  ],
  Array [
    "OwnerModelSelector",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { QueryBuilder } from \\"mst-gql\\"
import {OrganizationModelSelector, UserModelSelector} from \\"./internal\\"

export class OwnerModelSelector extends QueryBuilder {
  get id() { return this.__attr(\`id\`) }
  get name() { return this.__attr(\`name\`) }
  user(builder?: string | UserModelSelector | ((selector: UserModelSelector) => UserModelSelector)) { return this.__inlineFragment(\`User\`, UserModelSelector, builder) }
  organization(builder?: string | OrganizationModelSelector | ((selector: OrganizationModelSelector) => OrganizationModelSelector)) { return this.__inlineFragment(\`Organization\`, OrganizationModelSelector, builder) }
}
export function selectFromOwner() {
  return new OwnerModelSelector()
}

export const ownerModelPrimitives = selectFromOwner().name",
    true,
  ],
  Array [
    "UserModel.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { types } from \\"mobx-state-tree\\"
import { QueryBuilder } from \\"mst-gql\\"
import { ModelBase } from \\"./internal\\"
import {RootStoreType} from \\"./internal\\"


/**
 * UserBase
 * auto generated base class for the model UserModel.
 */
export const UserModelBase = ModelBase
  .named('User')
  .props({
    __typename: types.optional(types.literal(\\"User\\"), \\"User\\"),
    id: types.identifier,
    name: types.maybeNull(types.string),
    avatar: types.maybeNull(types.string),
  })
  .views(self => ({
    get store() {
      return self.__getStore<RootStoreType>()
    }
  }))

export class UserModelSelector extends QueryBuilder {
  get id() { return this.__attr(\`id\`) }
  get name() { return this.__attr(\`name\`) }
  get avatar() { return this.__attr(\`avatar\`) }
}
export function selectFromUser() {
  return new UserModelSelector()
}

export const userModelPrimitives = selectFromUser().name.avatar
",
    true,
  ],
  Array [
    "UserModel",
    "import { Instance } from \\"mobx-state-tree\\"

import { UserModelBase } from \\"./internal\\"

/* The TypeScript type of an instance of UserModel */
export interface UserModelType extends Instance<typeof UserModel.Type> {}


/**
 * UserModel
 */
export const UserModel = UserModelBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(self))
    }
  }))
",
    false,
  ],
  Array [
    "OrganizationModel.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { types } from \\"mobx-state-tree\\"
import { QueryBuilder } from \\"mst-gql\\"
import { ModelBase } from \\"./internal\\"
import {RootStoreType} from \\"./internal\\"


/**
 * OrganizationBase
 * auto generated base class for the model OrganizationModel.
 */
export const OrganizationModelBase = ModelBase
  .named('Organization')
  .props({
    __typename: types.optional(types.literal(\\"Organization\\"), \\"Organization\\"),
    id: types.identifier,
    name: types.maybeNull(types.string),
    logo: types.maybeNull(types.string),
  })
  .views(self => ({
    get store() {
      return self.__getStore<RootStoreType>()
    }
  }))

export class OrganizationModelSelector extends QueryBuilder {
  get id() { return this.__attr(\`id\`) }
  get name() { return this.__attr(\`name\`) }
  get logo() { return this.__attr(\`logo\`) }
}
export function selectFromOrganization() {
  return new OrganizationModelSelector()
}

export const organizationModelPrimitives = selectFromOrganization().name.logo
",
    true,
  ],
  Array [
    "OrganizationModel",
    "import { Instance } from \\"mobx-state-tree\\"

import { OrganizationModelBase } from \\"./internal\\"

/* The TypeScript type of an instance of OrganizationModel */
export interface OrganizationModelType extends Instance<typeof OrganizationModel.Type> {}


/**
 * OrganizationModel
 */
export const OrganizationModel = OrganizationModelBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(self))
    }
  }))
",
    false,
  ],
  Array [
    "RootStore",
    "import { Instance } from \\"mobx-state-tree\\"
import { RootStoreBase } from \\"./RootStore.base\\"

export interface RootStoreType extends Instance<typeof RootStore.Type> {}

export const RootStore = RootStoreBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(self))
    }
  }))
",
    false,
  ],
  Array [
    "RootStore.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */
import { types } from \\"mobx-state-tree\\"
import { MSTGQLStore, configureStoreMixin, QueryOptions } from \\"mst-gql\\"
import { RepoModel, RepoModelType, repoModelPrimitives, RepoModelSelector, UserModel, UserModelType, userModelPrimitives, UserModelSelector, OrganizationModel, OrganizationModelType, organizationModelPrimitives, OrganizationModelSelector } from \\"./internal\\";


/**
* Store, managing, among others, all the objects received through graphQL
*/
export const RootStoreBase = MSTGQLStore
  .named(\\"RootStore\\")
  .extend(configureStoreMixin([['Repo', () => RepoModel], ['User', () => UserModel], ['Organization', () => OrganizationModel]], ['Repo']))
  .props({
    repos: types.optional(types.map(types.late(() => RepoModel)), {})
  })
  .actions(self => ({
    queryRepo(variables?: {  }, resultSelector: string | ((qb: RepoModelSelector) => RepoModelSelector) = repoModelPrimitives.toString(), options: QueryOptions = {}) {
      return self.query<{ repo: RepoModelType}>(\`query repo { repo {
        \${typeof resultSelector === \\"function\\" ? resultSelector(new RepoModelSelector()).toString() : resultSelector}
      } }\`, variables, options)
    },
  }))
",
    true,
  ],
  Array [
    "reactUtils",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { createStoreContext, createUseQueryHook } from \\"mst-gql\\"
import * as React from \\"react\\"
import { RootStore, RootStoreType } from \\"./RootStore\\"

export const StoreContext = createStoreContext<RootStoreType>(React)

export const useQuery = createUseQueryHook(StoreContext, React)
",
    true,
  ],
  Array [
    "internal",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

export * from \\"./ModelBase\\"
export * from \\"./RepoModel.base\\"
export * from \\"./RepoModel\\"
export * from \\"./OwnerModelSelector\\"
export * from \\"./UserModel.base\\"
export * from \\"./UserModel\\"
export * from \\"./OrganizationModel.base\\"
export * from \\"./OrganizationModel\\"
export * from \\"./RootStore\\"
export * from \\"./RootStore.base\\"
export * from \\"./reactUtils\\"
",
    true,
  ],
  Array [
    "index",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

export {RepoModel, selectFromRepo, repoModelPrimitives, RepoModelSelector, UserModel, selectFromUser, userModelPrimitives, UserModelSelector, OrganizationModel, selectFromOrganization, organizationModelPrimitives, OrganizationModelSelector, RootStore, useQuery, StoreContext } from \\"./internal\\"
import {RepoModelType, UserModelType, OrganizationModelType } from \\"./internal\\"

export type RepoModelType = RepoModelType;
export type UserModelType = UserModelType;
export type OrganizationModelType = OrganizationModelType;
",
    true,
  ],
]
`;

exports[`union field type to work 1`] = `
Array [
  Array [
    "ModelBase",
    "import { MSTGQLObject } from \\"mst-gql\\"

export const ModelBase = MSTGQLObject
",
    false,
  ],
  Array [
    "SearchResultModel.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { types } from \\"mobx-state-tree\\"
import { QueryBuilder } from \\"mst-gql\\"
import { ModelBase } from \\"./internal\\"
import {BookModel, MovieModel, SearchItemModelSelector, RootStoreType} from \\"./internal\\"


/**
 * SearchResultBase
 * auto generated base class for the model SearchResultModel.
 */
export const SearchResultModelBase = ModelBase
  .named('SearchResult')
  .props({
    __typename: types.optional(types.literal(\\"SearchResult\\"), \\"SearchResult\\"),
    inputQuery: types.maybeNull(types.string),
    items: types.optional(types.array(types.union(types.late(() => MovieModel), types.late(() => BookModel))), []),
  })
  .views(self => ({
    get store() {
      return self.__getStore<RootStoreType>()
    }
  }))

export class SearchResultModelSelector extends QueryBuilder {
  get inputQuery() { return this.__attr(\`inputQuery\`) }
  items(builder?: string | SearchItemModelSelector | ((selector: SearchItemModelSelector) => SearchItemModelSelector)) { return this.__child(\`items\`, SearchItemModelSelector, builder) }
}
export function selectFromSearchResult() {
  return new SearchResultModelSelector()
}

export const searchResultModelPrimitives = selectFromSearchResult().inputQuery
",
    true,
  ],
  Array [
    "SearchResultModel",
    "import { Instance } from \\"mobx-state-tree\\"

import { SearchResultModelBase } from \\"./internal\\"

/* The TypeScript type of an instance of SearchResultModel */
export interface SearchResultModelType extends Instance<typeof SearchResultModel.Type> {}


/**
 * SearchResultModel
 */
export const SearchResultModel = SearchResultModelBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(self))
    }
  }))
",
    false,
  ],
  Array [
    "SearchItemModelSelector",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { QueryBuilder } from \\"mst-gql\\"
import {BookModelSelector, bookModelPrimitives, MovieModelSelector, movieModelPrimitives} from \\"./internal\\"

export class SearchItemModelSelector extends QueryBuilder {
  movie(builder?: string | MovieModelSelector | ((selector: MovieModelSelector) => MovieModelSelector)) { return this.__inlineFragment(\`Movie\`, MovieModelSelector, builder) }
  book(builder?: string | BookModelSelector | ((selector: BookModelSelector) => BookModelSelector)) { return this.__inlineFragment(\`Book\`, BookModelSelector, builder) }
}
export function selectFromSearchItem() {
  return new SearchItemModelSelector()
}

// provides all primitive fields of union member types combined together
export const searchItemModelPrimitives = selectFromSearchItem().movie(movieModelPrimitives).book(bookModelPrimitives)",
    true,
  ],
  Array [
    "MovieModel.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { types } from \\"mobx-state-tree\\"
import { QueryBuilder } from \\"mst-gql\\"
import { ModelBase } from \\"./internal\\"
import {RootStoreType} from \\"./internal\\"


/**
 * MovieBase
 * auto generated base class for the model MovieModel.
 */
export const MovieModelBase = ModelBase
  .named('Movie')
  .props({
    __typename: types.optional(types.literal(\\"Movie\\"), \\"Movie\\"),
    description: types.maybeNull(types.string),
    director: types.maybeNull(types.string),
  })
  .views(self => ({
    get store() {
      return self.__getStore<RootStoreType>()
    }
  }))

export class MovieModelSelector extends QueryBuilder {
  get description() { return this.__attr(\`description\`) }
  get director() { return this.__attr(\`director\`) }
}
export function selectFromMovie() {
  return new MovieModelSelector()
}

export const movieModelPrimitives = selectFromMovie().description.director
",
    true,
  ],
  Array [
    "MovieModel",
    "import { Instance } from \\"mobx-state-tree\\"

import { MovieModelBase } from \\"./internal\\"

/* The TypeScript type of an instance of MovieModel */
export interface MovieModelType extends Instance<typeof MovieModel.Type> {}


/**
 * MovieModel
 */
export const MovieModel = MovieModelBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(self))
    }
  }))
",
    false,
  ],
  Array [
    "BookModel.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { types } from \\"mobx-state-tree\\"
import { QueryBuilder } from \\"mst-gql\\"
import { ModelBase } from \\"./internal\\"
import {RootStoreType} from \\"./internal\\"


/**
 * BookBase
 * auto generated base class for the model BookModel.
 */
export const BookModelBase = ModelBase
  .named('Book')
  .props({
    __typename: types.optional(types.literal(\\"Book\\"), \\"Book\\"),
    description: types.maybeNull(types.string),
    author: types.maybeNull(types.string),
  })
  .views(self => ({
    get store() {
      return self.__getStore<RootStoreType>()
    }
  }))

export class BookModelSelector extends QueryBuilder {
  get description() { return this.__attr(\`description\`) }
  get author() { return this.__attr(\`author\`) }
}
export function selectFromBook() {
  return new BookModelSelector()
}

export const bookModelPrimitives = selectFromBook().description.author
",
    true,
  ],
  Array [
    "BookModel",
    "import { Instance } from \\"mobx-state-tree\\"

import { BookModelBase } from \\"./internal\\"

/* The TypeScript type of an instance of BookModel */
export interface BookModelType extends Instance<typeof BookModel.Type> {}


/**
 * BookModel
 */
export const BookModel = BookModelBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(self))
    }
  }))
",
    false,
  ],
  Array [
    "RootStore",
    "import { Instance } from \\"mobx-state-tree\\"
import { RootStoreBase } from \\"./RootStore.base\\"

export interface RootStoreType extends Instance<typeof RootStore.Type> {}

export const RootStore = RootStoreBase
  .actions(self => ({
    // This is an auto-generated example action.
    log() {
      console.log(JSON.stringify(self))
    }
  }))
",
    false,
  ],
  Array [
    "RootStore.base",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */
import { types } from \\"mobx-state-tree\\"
import { MSTGQLStore, configureStoreMixin, QueryOptions } from \\"mst-gql\\"
import { SearchResultModel, SearchResultModelType, searchResultModelPrimitives, SearchResultModelSelector, MovieModel, MovieModelType, movieModelPrimitives, MovieModelSelector, BookModel, BookModelType, bookModelPrimitives, BookModelSelector } from \\"./internal\\";


/**
* Store, managing, among others, all the objects received through graphQL
*/
export const RootStoreBase = MSTGQLStore
  .named(\\"RootStore\\")
  .extend(configureStoreMixin([['SearchResult', () => SearchResultModel], ['Movie', () => MovieModel], ['Book', () => BookModel]], ['SearchResult']))
  .props({
    searchresults: types.optional(types.map(types.late(() => SearchResultModel)), {})
  })
  .actions(self => ({
    querySearch(variables: { text: string }, resultSelector: string | ((qb: SearchResultModelSelector) => SearchResultModelSelector) = searchResultModelPrimitives.toString(), options: QueryOptions = {}) {
      return self.query<{ search: SearchResultModelType}>(\`query search($text: String!) { search(text: $text) {
        \${typeof resultSelector === \\"function\\" ? resultSelector(new SearchResultModelSelector()).toString() : resultSelector}
      } }\`, variables, options)
    },
  }))
",
    true,
  ],
  Array [
    "reactUtils",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

import { createStoreContext, createUseQueryHook } from \\"mst-gql\\"
import * as React from \\"react\\"
import { RootStore, RootStoreType } from \\"./RootStore\\"

export const StoreContext = createStoreContext<RootStoreType>(React)

export const useQuery = createUseQueryHook(StoreContext, React)
",
    true,
  ],
  Array [
    "internal",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

export * from \\"./ModelBase\\"
export * from \\"./SearchResultModel.base\\"
export * from \\"./SearchResultModel\\"
export * from \\"./SearchItemModelSelector\\"
export * from \\"./MovieModel.base\\"
export * from \\"./MovieModel\\"
export * from \\"./BookModel.base\\"
export * from \\"./BookModel\\"
export * from \\"./RootStore\\"
export * from \\"./RootStore.base\\"
export * from \\"./reactUtils\\"
",
    true,
  ],
  Array [
    "index",
    "/* This is a mst-gql generated file, don't modify it manually */
/* eslint-disable */
/* tslint:disable */

export {SearchResultModel, selectFromSearchResult, searchResultModelPrimitives, SearchResultModelSelector, MovieModel, selectFromMovie, movieModelPrimitives, MovieModelSelector, BookModel, selectFromBook, bookModelPrimitives, BookModelSelector, RootStore, useQuery, StoreContext } from \\"./internal\\"
import {SearchResultModelType, MovieModelType, BookModelType } from \\"./internal\\"

export type SearchResultModelType = SearchResultModelType;
export type MovieModelType = MovieModelType;
export type BookModelType = BookModelType;
",
    true,
  ],
]
`;
